--- a/index.html
+++ b/index.html
@@ -1,12 +1,43 @@
 <!DOCTYPE html>
 <html>
-  <head>
-    <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width,initial-scale=1.0">
-    <title>new-retail</title>
-  </head>
-  <body>
-    <div id="app"></div>
-    <!-- built files will be auto injected -->
-  </body>
+
+<head>
+  <meta charset="utf-8">
+  <meta http-equiv="X-UA-Compatible" content="IE=edge">
+  <!-- 移动设备 viewport -->
+  <meta name="viewport" content="width=device-width,initial-scale=1.0,minimum-scale=1.0,maximum-scale=1.0,user-scalable=no,minimal-ui">
+  <meta name="author" content="admui.com">
+  <!-- 360浏览器默认使用Webkit内核 -->
+  <meta name="renderer" content="webkit">
+  <!-- 禁止搜索引擎抓取 -->
+  <meta name="robots" content="nofollow">
+  <!-- 禁止百度SiteAPP转码 -->
+  <meta http-equiv="Cache-Control" content="no-siteapp">
+  <meta name="mobile-web-app-capable" content="yes">
+  <meta name="apple-mobile-web-app-capable" content="yes">
+  <meta name="apple-mobile-web-app-status-bar-style" content="black">
+  <meta name="apple-mobile-web-app-title" content="Admui">
+  <meta name="msapplication-TileImage" content="/images/app-icon72x72@2x.png">
+  <meta name="msapplication-TileColor" content="#62a8ea">
+  <title>fcwangpu</title>
+</head>
+
+<body class="">
+  <div id="app"></div>
+  <!-- built files will be auto injected -->
+</body>
+<style>
+html,
+body,
+#app {
+  height: 100%;
+  width: 100%;
+}
+
+#app {
+  -webkit-font-smoothing: antialiased;
+  -moz-osx-font-smoothing: grayscale;
+}
+</style>
+
 </html>
